methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:4: error: ':' expected but ',' found.
def flowerDraw(autour, coeur){
                     ^FlowerPot:14: error: identifier expected but '}' found.
}
^