methods.flowerpot.FlowerPot.scala.code
var autour = Color.RED
var coeur = Color.PINK

def flowerDraw(autour, coeur){
  setBrushColor(autour)
  brushDown()
  forward(3)
  backward()
  left()
  forward()
  backward(3)
}